--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,13 +2,13 @@
 %footer.footer.text-center
   .container
     .row
-      .col-md-12#connect
+      .col-12#connect
         %h3 Connect with us!
-      .col-md-6.mb-6.mb-lg-0
+      .col-6.mb-6.mb-lg-0
         %h5
           WeChat Group
         %p=image_tag "weChatQRcode.jpg", height: "100px"
-      .col-md-6.mb-6.mb-lg-0
+      .col-6.mb-6.mb-lg-0
         %h5
           Email
         %p iusmberkeley@gmail.com
