--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -8,7 +8,7 @@
     .carousel-inner{role: "listbox"}
       .carousel-item.active
         =image_tag "TFG-WEB.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
-        .carousel-caption.d-none.d-md-block
+        .carousel-caption.d-none.d-block
           %h3 The Friday Gathering - Summer Edition!
           %p
             Summer is a time for deepening our relationship with God and with one another.
@@ -22,7 +22,7 @@
           %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "SWS-generic.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
-        .carousel-caption.d-none.d-md-block
+        .carousel-caption.d-none.d-block
           %p We gather to worship God through songs, prayers, and listening to sermons every Sunday. Everyone is welcome!
           %h6
             = link_to 'Harbor Bay Parkway', 'https://www.google.com/maps/place/Gracepoint+Berkeley+Church/@37.7259911,-122.23579,17z/data=!3m1!4b1!4m5!3m4!1s0x808f846a9fc9b947:0xb503fe545d3946b6!8m2!3d37.7279048!4d-122.2338217', target: '_blank'
@@ -30,7 +30,7 @@
           %p Please contact Nghia (nghia.tran [@] gpmail.org) for rides
       .carousel-item
         =image_tag "iusm-big-group.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
-        .carousel-caption.d-none.d-md-block
+        .carousel-caption.d-none.d-block
           %h3 Events in Pictures
           %p
             Want to know we have been up to?
