--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -4,19 +4,16 @@
     = link_to "MY GAME BOARD", current_user.board, class: 'btn btn-warning'
   - else
     = link_to "LET'S START!", new_board_path, class: 'btn btn-warning'
-
-
 %h2.text-primary Welcome to the Summer Challenge!
-.lead
-  %p We want to grow our relationship with God by increasing our knowledge of the bible and other truths, as well as continuing our fellowship with one another this summer.
-  %p.small.text-danger
-    %strong Hebrews 10:24-25 And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.
+%h4 We want to grow our relationship with God by increasing our knowledge of the bible and other truths, as well as continuing our fellowship with one another this summer.
+%h4.text-danger
+  %strong Hebrews 10:24-25 And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.
 %hr
 .row
-  .col-md-8
+  .col-8
     .row
       - @teams.each_with_index do |team, rank|
-        .col-md-6
+        .col-6
           %ul.list-group.my-4
             %h5.d-flex.justify-content-between.align-items-center
               No. #{rank+1}: #{team.name}
@@ -33,7 +30,7 @@
                   %span.ml-1= link_to fa_icon('user'), user_path(user)
                 %span.badge.badge-primary.badge-pill
                   = user.score
-  .col-md-4
+  .col-4
     = render partial: 'sharing'
 
 #boardInstrModal.modal.fade
