--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,21 +1,21 @@
 .row
-  .col-md-9
+  .col-9
     .row
-      .col-md-8
+      .col-8
         %h2.text-primary
           #{@user_possessive} board
           = link_to fa_icon('user'), user_path(@board.user)
-      .col-md-4.text-right
+      .col-4.text-right
         - unless @board == current_user.board
           = link_to 'my board', board_path(current_user.board)
           |
         = link_to 'scoreboard', boards_path
     .row
-      .col-md-6
+      .col-6
         %h4
           Score:
           = @board.score
-      .col-md-6.text-right
+      .col-6.text-right
         - if @board.user.team
           %h4
             #{@board.user.team.name}:
@@ -43,7 +43,7 @@
               .all-sharing.small.mt-2
                 = link_to cells_path(row: index_row, col: index_col) do
                   all sharing [#{Cell.where(col: index_col, row: index_row).count}]
-  .col-md-3
+  .col-3
     / = render partial: 'bonus'
     = render partial: 'sharing'
 
