--- a/app/views/cells/_header.html.haml
+++ b/app/views/cells/_header.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-12
+  .col-12
     .pull-right
       - unless board.user == current_user
         = link_to "#{board.user.username}'s board", board_path(board)
@@ -8,7 +8,7 @@
       |
       = link_to 'scoreboard', boards_path
 .row
-  .col-md-12
+  .col-12
     .mb-3.text-center.text-info
       %h2
         = Board::CELLS[row][col][:name]
