--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,23 +4,17 @@
     =link_to '/', class: 'navbar-brand js-scroll-trigger' do
       = image_tag 'favicon.ico', width: '30px'
       IUSM
-    %button.navbar-toggler.navbar-toggler-right{'aria-controls' => 'navbarResponsive', 'aria-expanded' => 'false', 'aria-label' => 'Toggle navigation', 'data-target' => '#navbarResponsive', 'data-bs-toggle' => 'collapse', type: 'button'}
-      Menu
-      %i.fa.fa-bars
-    #navbarResponsive.collapse.navbar-collapse
-      %ul.navbar-nav.ml-auto
-        %li.nav-item
-          .dropdown
-            = link_to '#', class: 'btn btn-secondary dropdown-toggle',
-              id: 'dropdownMenuLink', data: { bs_toggle: 'dropdown' },
-              'aria-haspopup' => 'true', 'aria-expanded' => 'false' do
-              = user_signed_in? ? current_user.username : 'Member'
-            .dropdown-menu.dropdown-menu-right{'aria-labelledby' => 'dropdownMenuButton'}
-              - if user_signed_in?
-                .dropdown-item=link_to 'Summer Challenge', boards_path
-                - if current_user.board
-                  .dropdown-item=link_to 'My game board', board_path(current_user.board)
-                .dropdown-item=link_to 'My profile', user_path(current_user)
-                .dropdown-item=link_to 'Sign out', destroy_user_session_path
-              - else
-                .dropdown-item=link_to 'Sign in', new_user_session_path
+    %ul.navbar-nav.d-flex
+      %li.nav-item.dropdown
+        = link_to '#', class: 'nav-link dropdown-toggle', id: 'dropdownMenuLink', data: { bs_toggle: 'dropdown' },
+          'aria-haspopup' => 'true', 'aria-expanded' => 'false' do
+          = user_signed_in? ? current_user.username : 'Member'
+        %ul.dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
+          - if user_signed_in?
+            %li=link_to 'Summer Challenge', boards_path, class: 'dropdown-item'
+            - if current_user.board
+              %li=link_to 'My game board', board_path(current_user.board), class: 'dropdown-item'
+            %li=link_to 'My profile', user_path(current_user), class: 'dropdown-item'
+            %li=link_to 'Sign out', destroy_user_session_path, class: 'dropdown-item'
+          - else
+            %li=link_to 'Sign in', new_user_session_path, class: 'dropdown-item'
