--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,12 +5,13 @@
       = image_tag 'favicon.ico', width: '30px'
       IUSM
     %ul.navbar-nav.d-flex
-      %li.nav-item.dropdown
-        = link_to 'Game boards', '#', class: 'nav-link dropdown-toggle', id: 'dropdownScoreboardLink', data: { bs_toggle: 'dropdown' },
-        'aria-haspopup' => 'true', 'aria-expanded' => 'false'
-        %ul.dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
-          %li= link_to 'My board', board_path(current_user.board), class: 'dropdown-item'
-          %li= link_to 'Scoreboard', boards_path, class: 'dropdown-item'
+      - if user_signed_in?
+        %li.nav-item.dropdown
+          = link_to 'Game boards', '#', class: 'nav-link dropdown-toggle', id: 'dropdownScoreboardLink', data: { bs_toggle: 'dropdown' },
+          'aria-haspopup' => 'true', 'aria-expanded' => 'false'
+          %ul.dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
+            %li= link_to 'My board', board_path(current_user.board), class: 'dropdown-item'
+            %li= link_to 'Scoreboard', boards_path, class: 'dropdown-item'
 
       %li.nav-item.dropdown
         = link_to '#', class: 'nav-link dropdown-toggle', id: 'dropdownMenuLink', data: { bs_toggle: 'dropdown' },
