--- a/app/views/cells/show.html.haml
+++ b/app/views/cells/show.html.haml
@@ -15,20 +15,17 @@
           %li.nav-item
             = link_to "Delete", board_cell_path(@cell.board, @cell), method: :delete, data: { confirm: 'Are you sure?' }, class: 'nav-link'
 .row
-  .col-12
+  .col-10
     .card{style:'min-height: 200px'}
       .card-body
-        - if @cell.picture.present?
-          .cell-picture.pull-right
-            .m-3
-              = link_to @cell.picture.url(:original),
-                data: { lightbox: @cell.picture_file_name,
-                        title: @cell.picture_file_name } do
-                = image_tag @cell.picture.url(:medium),
-                  class: 'img-fluid img-thumbnail'
-            - if current_user == @cell.board.user
-              .mx-3= link_to 'Delete picture', { action: :delete_picture }, method: :put, class: "btn btn-danger btn-sm"
         = markdown(@cell.response)
+  .col-2
+    - if @cell.picture.attached?
+      .my-2
+        = link_to rails_blob_path(@cell.picture, disposition: "attachment"),
+          data: { lightbox: @cell.picture.filename, title: @cell.picture.filename } do
+          = image_tag @cell.picture.representation(resize_to_limit: [200, 200]), class: 'img-fluid img-thumbnail'
+      .mb-2.text-muted= @cell.picture.filename
 .row.my-4
   .col-12
     = commontator_thread(@cell)
