--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,5 +25,6 @@
             = render partial: "layouts/flash"
         = yield
     = render partial: 'layouts/footer'
+    = render partial: 'layouts/modal_instructions'
 
-    = javascript_include_tag 'lightbox2/dist/js/lightbox.min'
+= javascript_include_tag 'lightbox2/dist/js/lightbox.min'
