--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,22 +1,14 @@
 / Footer
-%footer.footer.text-center
-  .container
+%footer.text-center.bg-dark.fixed-bottom.text-white
+  .container.py-4
     .row
-      .col-12#connect
-        %h3 Connect with us!
-      .col-6.mb-6.mb-lg-0
+      .col-12
+        %h3 Wishing you fruitful winter!
+      .col-12
         %h5
-          WeChat Group
+          Join IUSM Winter Challenge WeChat group
         %p=image_tag "weChatQRcode.jpg", height: "100px"
-      .col-6.mb-6.mb-lg-0
-        %h5
-          Email
-        %p iusmberkeley@gmail.com
-.copyright.py-4.text-center.text-white
-  .container
-    .small
-      Copyright © IUSM 2021
-/ Scroll to Top Button (Only visible on small and extra-small screen sizes)
-.scroll-top.d-lg-none.position-fixed
-  =link_to '#page-top', class: 'js-scroll-trigger d-block text-center text-white roundedr' do
-    %i.fa.fa-chevron-up
+    .row
+      .col-12
+        .small
+          Copyright © IUSM 2021
