Replaced summer with winter

--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,6 +1,6 @@
 .row.mb-3
   .col-8
-    %h2.text-primary Welcome to the Summer Challenge!
+    %h2.text-primary Welcome to the IUSM Winter Challenge!
   .col-4
     = link_to 'INSTRUCTIONS', '#', data: { bs_toggle: 'modal', bs_target: '#boardInstrModal' }, class: 'btn btn-success'
     - if current_user.board
@@ -8,7 +8,7 @@
     - else
       = link_to "LET'S START!", new_board_path, class: 'btn btn-warning'
 .row.mb-3
-  %h4 We want to grow our relationship with God by increasing our knowledge of the bible and other truths, as well as continuing our fellowship with one another this summer.
+  %h4 We want to grow our relationship with God by increasing our knowledge of the bible and other truths, as well as continuing our fellowship with one another this winter.
   %h6.text-danger
     %strong Hebrews 10:24-25 And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.
 %hr
