--- a/app/views/boards/new.html.haml
+++ b/app/views/boards/new.html.haml
@@ -1,5 +1,5 @@
 %section
-  %h2 Are you ready for the summer challenge?
+  %h2 Are you ready for the IUSM Winter Challenge?
   #opening_answer
     = form_for @board, url: { action: 'create' } do |f|
       = f.hidden_field :user_id, value: current_user.id
