--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -9,9 +9,9 @@
       .carousel-item.active
         =image_tag "TFG-WEB.jpg", class: 'd-block img-fluid', alt: 'Responsive image'
         .carousel-caption.d-none.d-block
-          %h3 The Friday Gathering - Summer Edition!
+          %h3 The Friday Gathering - Winter Edition!
           %p
-            Summer is a time for deepening our relationship with God and with one another.
+            Winter can be a time for deepening our relationship with God and with one another.
             %br
             The best way to do it is through studying, reflecting and sharing from God's word together.
           %h6
