no fixed bottom

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 / Footer
-%footer.text-center.bg-dark.fixed-bottom.text-white
-  .container.py-4
+%footer.text-center.text-white.bg-dark.py-4.mt-4
+  .container
     .row
       .col-12
         %h3 Wishing you fruitful winter!
