--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,8 +2,7 @@
 %nav.navbar.navbar-expand-lg.navbar-light.bg-light.text-uppercase
   .container
     =link_to '/', class: 'navbar-brand js-scroll-trigger' do
-      = image_tag 'favicon.ico', width: '30px'
-      IUSM
+      = image_tag 'IUSMLogo.png', width: '150px', alt: 'IUSM', title: 'IUSM'
     %ul.navbar-nav.d-flex
       %li.nav-item 
         =link_to 'Instructions', '#', data: { bs_toggle: 'modal', bs_target: '#boardInstrModal' }, class: 'nav-link'
