change xhard to crazy

--- a/app/views/layouts/_modal_instructions.html.haml
+++ b/app/views/layouts/_modal_instructions.html.haml
@@ -9,7 +9,7 @@
         %p.easy Green is easy ==> #{Board::SCORE[:easy]} points.
         %p.medium Orange is medium ==> #{Board::SCORE[:medium]} points.
         %p.hard Dark red is hard ==> #{Board::SCORE[:hard]} points.
-        %p.xhard Red (center) is extra hard ==> #{Board::SCORE[:xhard]} points.
+        %p.crazy Red (center) is extra hard ==> #{Board::SCORE[:crazy]} points.
         %p
           %strong BINGO! (five in a row) = #{Board::SCORE[:bingo]} points
         %h4 Prizes
