--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,10 +3,9 @@
   .container
     .row
       .col-12
-        %h3 Wishing you fruitful winter!
+        %h3 Wishing you a fruitful winter!
       .col-12
-        %h5
-          Join IUSM Winter Challenge WeChat group
+        %h5 Join IUSM Winter Challenge WeChat group
         %p=image_tag "weChatQRcode.jpg", height: "100px"
     .row
       .col-12
