--- a/app/views/cells/edit.html.haml
+++ b/app/views/cells/edit.html.haml
@@ -21,9 +21,12 @@
     .col-3
       = f.label 'Upload a picture or video?'
       - if @cell.picture.attached?
-        = link_to rails_blob_path(@cell.picture, disposition: "attachment"),
-          data: { lightbox: @cell.picture.filename, title: @cell.picture.filename } do
-          = image_tag @cell.picture.representation(resize_to_limit: [200, 200]), class: 'img-fluid img-thumbnail'
+        - if @cell.picture.content_type.include?("image")
+          = link_to rails_blob_path(@cell.picture, disposition: "attachment"),
+            data: { lightbox: @cell.picture.filename, title: @cell.picture.filename } do
+            = image_tag @cell.picture.representation(resize_to_limit: [200, 200]), class: 'img-fluid img-thumbnail'
+        - else
+          = video_tag url_for(@cell.picture), controls: true
         %br
         = link_to 'Delete picture', { action: :delete_picture }, method: :put, class: "btn btn-danger btn-sm"
       .mt-4= f.file_field :picture, direct_upload: true
