--- a/app/views/boards/_sharing.html.haml
+++ b/app/views/boards/_sharing.html.haml
@@ -1,10 +1,12 @@
-.recent-sharing
-  %ul.list-group.list-group-flush#recent-activities
-    %li.list-group-item.text-info
-      %strong RECENT SHARING
-    - Cell.includes(:commontator_thread, :board).order(finished_at: :desc).limit(7).each do |cell|
-      %li.list-group-item
-        = link_to cell.board.user.username, board_path(cell.board)
-        \-
-        = link_to cell.response.truncate_words(15), board_cell_path(cell.board, cell)
-        .text-warning.text-right Comments (#{cell.commontator_thread.comments.count})
+- sharings = Cell.includes(:commontator_thread, :board).order(finished_at: :desc).limit(7)
+- if sharings.any?
+  .recent-sharing
+    %ul.list-group.list-group-flush#recent-activities
+      %li.list-group-item.text-info
+        %strong RECENT SHARING
+      - sharings.each do |cell|
+        %li.list-group-item
+          = link_to cell.board.user.username, board_path(cell.board)
+          \-
+          = link_to cell.response.truncate_words(15), board_cell_path(cell.board, cell)
+          .text-warning.text-right Comments (#{cell.commontator_thread.comments.count})
